// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinLabel Component render() should render the spin label with the \`hide\` class modifier if the show prop is false 1`] = `
<div
  className="spin-container spin-container--hide"
>
  <div
    className="spin"
  >
    <div
      className="spin__arrow-container--left"
    >
      <span
        className="spin__arrow spin__arrow--left"
      />
      <span
        className="spin__arrow spin__arrow--left"
      />
      <span
        className="spin__arrow spin__arrow--left"
      />
      <span
        className="spin__arrow spin__arrow--left"
      />
    </div>
    <div
      className="spin__label"
    >
      Spin
    </div>
    <div
      className="spin__arrow-container--right"
    >
      <span
        className="spin__arrow spin__arrow--right"
      />
      <span
        className="spin__arrow spin__arrow--right"
      />
      <span
        className="spin__arrow spin__arrow--right"
      />
      <span
        className="spin__arrow spin__arrow--right"
      />
    </div>
  </div>
</div>
`;

exports[`SpinLabel Component render() should render the spin label with the \`show\` class modifier if the show prop is true 1`] = `
<div
  className="spin-container spin-container--show"
>
  <div
    className="spin"
  >
    <div
      className="spin__arrow-container--left"
    >
      <span
        className="spin__arrow spin__arrow--left"
      />
      <span
        className="spin__arrow spin__arrow--left"
      />
      <span
        className="spin__arrow spin__arrow--left"
      />
      <span
        className="spin__arrow spin__arrow--left"
      />
    </div>
    <div
      className="spin__label"
    >
      Spin
    </div>
    <div
      className="spin__arrow-container--right"
    >
      <span
        className="spin__arrow spin__arrow--right"
      />
      <span
        className="spin__arrow spin__arrow--right"
      />
      <span
        className="spin__arrow spin__arrow--right"
      />
      <span
        className="spin__arrow spin__arrow--right"
      />
    </div>
  </div>
</div>
`;
